[project]
name = "yellow-sign"
version = "1.0.0"
description = "The King in Yellow - A turn-based roguelike RPG built with Pygame"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pygame>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.0",
    "coverage>=7.0",
    "black>=24.0",
    "flake8>=7.0",
    "pre-commit>=3.0",
]

# ── Black ──────────────────────────────────────────
[tool.black]
line-length = 120
target-version = ["py310"]

# ── Coverage ───────────────────────────────────────
[tool.coverage.run]
branch = true
source = ["engine", "data", "shared", "screens", "save_system"]
omit = [
    "*/__pycache__/*",
    "*/tests/*",
    "*/pygame_game.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 0
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def __repr__",
    "raise NotImplementedError",
]
